Archive2/7a/1c16a0e1f82333/output
main.cpp: In function 'main':
main.cpp:6:1: warning: left shift count >= width of type [enabled by default]
 }
 ^
main.cpp:6:1: error: expected ';' before '}' token
